# ditto

./: .gitignore  .travis.yml  README.md  ditto.cabal  package.yaml  stack.yaml
agda/: BoolAsNat.agda  BoolAsUnit.agda  ChurchBool.agda  NatAsBool.agda  NatAsBool2.agda  NatAsBool3.agda  UnitAsBool.agda  UnitAsUnit.agda  UnitAsUnit2.agda  WithConstruct.agda
doc/: notes.org  prelude.tex  spec.tex
editor/emacs/: ditto-mode.el
examples/: stlc.dtt
src/: Main.hs
src/Ditto/: Check.hs  Cli.hs  Conv.hs  Cover.hs  Delta.hs  During.hs  Env.hs  Expand.hs  Funify.hs  Match.hs  Monad.hs  Parse.hs  Pretty.hs  Recheck.hs  Solve.hs  Sub.hs  Surf.hs  Syntax.hs  Test.hs  Throw.hs  Whnf.hs
src/test/: Test.hs
tests/fail/: ArrowSyntax.dtt  InferMotiveFromArg.dtt  Pair.dtt  Unsolved.dtt
tests/pass/: BigTypeSyntax.dtt  ClosedIR.dtt  DependentVectorPatterns.ditto  DependentVectorPatternsExpl.dtt  DependentVectorPatternsImpl.dtt  Eta.dtt  IClosed.dtt  InferMotive.dtt  InferMotiveFromGoal.dtt  IntrinsicEvaluator.ditto  IntrinsicEvaluator.dtt  NormaInaccPats.dtt  Pair.dtt  PartialClauses.dtt  PiNatUniv.dtt  RGB.dtt  SimpleComputingPatterns.ditto  SimpleComputingPatterns.dtt  SmallTypeSyntax.dtt  TryAllSplits.dtt  stlc.dtt
