name:           ditto
version:        0.1.0.0
license:        GPL-3
license-file:   LICENSE
author:         Larry Diehl, Francisco Ferreira
maintainer:     larrytheliquid@gmail.com
homepage:       https://github.com/ditto/ditto
bug-reports:    https://github.com/ditto/ditto/issues

stability:      Alpha
category:       Dependent Types
synopsis:       A Super Kawaii Programming Language with Dependent Types
description:    Please see README.md
cabal-version:  >= 1.10

build-type:     Simple

source-repository head
  type:     git
  location: git@github.com:ditto/ditto.git

library
  hs-source-dirs: src
  exposed-modules:
                  Ditto.Check
                , Ditto.Cli
                , Ditto.Conv
                , Ditto.Cover
                , Ditto.Env
                , Ditto.Expand
                , Ditto.Funify
                , Ditto.Match
                , Ditto.Monad
                , Ditto.Parse
                , Ditto.Pretty
                , Ditto.Recheck
                , Ditto.Solve
                , Ditto.Sub
                , Ditto.Surf
                , Ditto.Syntax
                , Ditto.Throw
                , Ditto.Test
                , Ditto.Whnf

  build-depends:  base >=4 && <5
                , parsec
                , mtl
                , wl-pprint
                , optparse-applicative
                , HUnit
                , directory
                , filepath
                , containers
  default-extensions:
                  LambdaCase
                , TupleSections
                , ViewPatterns

  ghc-prof-options: -fprof-auto
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

executable dtt
  main-is:        Main.hs
  hs-source-dirs: src/main

  build-depends:  ditto
                , base >=4 && <5

  ghc-prof-options: -fprof-auto
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

test-suite ditto-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/main
  main-is:             Test.hs
  build-depends:  ditto
                , base >=4 && <5
                , HUnit
                , directory
                , filepath
  default-language:    Haskell2010